Fix code font.
Looks like the recent update caused source lines to get wrapped in `<a>` tags,
which triggered some CSS and messed up our code fonts.

This is maybe not the best solution, but it works. Will call in the experts to
review.

--- a/content/css/custom.css
+++ b/content/css/custom.css
@@ -149,3 +149,7 @@ img.location-image  {
 .course-type-intro:after {
   content: "Introductory";
 }
+
+a.sourceLine {
+  font-family: inherit;
+}
